# reznez

./: .gitignore  Cargo.toml  README.md  rustfmt.toml  todo
.cargo/: config.toml
.github/workflows/: rust.yml
palettes/: 2C02.pal
splitbits/: Cargo.toml
splitbits/src/: character.rs  field.rs  lib.rs  segment.rs  template.rs
splitbits/tests/: test.rs
src/: address.rs  bus.rs  cartridge.rs  config.rs  cpu.rs  gui.rs  lib.rs  main.rs  mapper.rs  mapper_list.rs  master_clock.rs  memory.rs  nes.rs  op_code.rs  status.rs  util.rs
src/analysis/: cartridge_db.rs  mod.rs
src/apu/: apu.rs  apu_clock.rs  apu_registers.rs  dmc.rs  envelope.rs  frame_counter.rs  frequency_timer.rs  length_counter.rs  mixer.rs  mod.rs  noise_channel.rs  pulse_channel.rs  sweep.rs  timer.rs  triangle_channel.rs
src/assembler/: assembler.rs  mod.rs  raw_mem.rs
src/cartridge/: cartridge.rs  cartridge_header.rs  cartridge_header_and_data.rs  cartridge_metadata.rs  header_db.rs  mod.rs  resolved_metadata.rs
src/controller/: joypad.rs
src/counter/: counter.rs  decrementing_counter.rs  incrementing_counter.rs  irq_counter_info.rs  mod.rs  when_disabled_prevent.rs
src/cpu/: address.rs  cpu.rs  cpu_mode.rs  cycle_action.rs  cycle_action_queue.rs  dma_transfer.rs  dmc_dma.rs  instruction.rs  memory.rs  mod.rs  oam_dma.rs  port_access.rs  status.rs  step.rs  step_action.rs  step_queue.rs
src/gui/: bevy_gui.rs  egui_gui.rs  frame_dump_gui.rs  gui.rs  mod.rs  no_gui.rs  sdl_gui.rs  window_renderer.rs  world.rs
src/logging/: formatter.rs  logger.rs
src/mapper/: mapper.rs  mapper0.rs  mapper_list.rs  mod.rs
src/mappers/: mapper000.rs  mapper001_0.rs  mapper001_5.rs  mapper002_1.rs  mapper002_2.rs  mapper003_1.rs  mapper003_2.rs  mapper004_0.rs  mapper004_1.rs  mapper004_3.rs  mapper004_4.rs  mapper004_rev_a.rs  mapper005.rs  mapper007_1.rs  mapper007_2.rs  mapper009.rs  mapper010.rs  mapper011.rs  mapper013.rs  mapper015.rs  mapper016_4.rs  mapper016_5.rs  mapper018.rs  mapper019.rs  mapper021_1.rs  mapper021_2.rs  mapper022.rs  mapper023_1.rs  mapper023_2.rs  mapper023_3.rs  mapper025_1.rs  mapper025_2.rs  mapper025_3.rs  mapper028.rs  mapper029.rs  mapper031.rs  mapper032.rs  mapper033.rs  mapper034_1.rs  mapper034_2.rs  (+127 more)
src/memory/: address_template.rs  bank_index.rs  bit_template.rs  board.rs  cpu_address.rs  cpu_internal_ram.rs  initial_layout.rs  irq_source.rs  layout.rs  mapper.rs  mapper_list.rs  memory.rs  mod.rs  palette_ram.rs  port_access.rs  ports.rs  ppu_address.rs  ppu_internal_ram.rs  ppu_ram.rs  raw_memory.rs  read_result.rs  signal_level.rs  small_page.rs  stack.rs  vram.rs  window.rs  writability.rs
src/ppu/: address.rs  clock.rs  constants.rs  cycle_action.rs  frame.rs  memory.rs  mod.rs  name_table.rs  name_table_mirroring.rs  name_table_number.rs  oam.rs  pattern_table.rs  pattern_table_side.rs  pixel_column.rs  pixel_index.rs  pixel_row.rs  ppu.rs  ppu_clock.rs  ppu_registers.rs  screen.rs  sprite.rs  tile.rs  tile_number.rs
src/util/: bit_util.rs  circular_buffer.rs  const_vec.rs  counter.rs  edge_detector.rs  hash_util.rs  integer.rs  logger.rs  (+7 more)
tests/: framematch.rs  nestest.rs
(+868 files in other folders)
