[package]
name = "reznez"
version = "0.1.0"
edition = "2021"

[dependencies]
arr_macro = "0.1.3"
bitvec = "1.0.1"
crc32fast = "1.4.0"
enum-iterator = "0.6"
itertools = "0.10.3"
lazy_static = "1.4.0"
modular-bitfield = "0.11.2"
num-derive = "0.4.2"
num-traits = "0.2.19"
rayon = "1.5.3"
rodio = "0.16.0"
roxmltree = "0.19.0"
rusqlite = {version = "0.27.0", features = ["bundled"]}
sscanf = "0.1.4"
structopt = "0.3.25"
strum = "0.23.0"
strum_macros = "0.23.1"
walkdir = "2.3.2"

egui = "0.17"
egui_wgpu_backend = "0.17"
egui-winit = { version = "0.17", default-features = false, features = ["links"] }

pixels = "0.9"

winit = "0.26"
winit_input_helper = "0.11"

[profile.release]
debug = true

[dependencies.log]
version = "0.4.14"
features = ["std"]
