[package]
name = "reznez"
version = "0.0.0"
edition = "2021"
license = "GPL-2.0-only"
authors = ["Sean Erle Johnson"]
readme = "README.md"
documentation = "https://docs.rs/reznez"
repository = "https://github.com/merehap/reznez.git"
description = "The high accuracy NES Emulator"
keywords = ["NES", "Nintendo", "emulator", "highaccuracy"]
categories = ["emulators", "games"]

[dependencies]
arr_macro = "0.1.3"
bitvec = "1.0.1"
crc32fast = "1.4.0"
dashmap = "6.1.0"
enum-iterator = "0.6"
itertools = "0.10.3"
modular-bitfield = "0.11.2"
num-derive = "0.4.2"
num-traits = "0.2.19"
rayon = "1.5.3"
rodio = "0.16.0"
roxmltree = "0.19.0"
rusqlite = {version = "0.32.1", features = ["bundled"]}
splitbits = "0.1.2"
sscanf = "0.1.4"
structopt = "0.3.25"
strum = "0.23.0"
strum_macros = "0.23.1"
walkdir = "2.3.2"
ux = "0.1.6"

egui = "0.18"
egui_wgpu_backend = "0.18"
egui-winit = { version = "0.18", default-features = false, features = ["links"] }

pixels = "0.10"

winit = "0.26"
winit_input_helper = "0.11"

[profile.release]
debug = true

[dependencies.log]
version = "0.4.14"
features = ["std"]
